kubernetes/animize.network.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: animize-frontend-network
  namespace: animize
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
    - host: web.animize.my.id
      http:
        paths:
          - backend:
              service:
                name: animize-frontend-service
                port:
                  number: 3000
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - web.animize.my.id
      secretName: srv-animize-web-cert
